# image-bridge

./: README.md  pyproject.toml
image_bridge/: main.py
static/: index.html
